    - Added maze generation algorithm setting with the options "Kruskal", "Recursive Backtracker", "Wilson", and "Binary Tree".
        For use with world generation modes that generate mazes.
  Changes:
    - Spiral world generation mode can now generate with either orientation of a spiral (clockwise or counterclockwise).
  Balancing:
    - A hex containing sulfuric acid geysers (on Vulcanus) or crude oil wells (on Nauvis) is now guaranteed to exist near the spawn hex.
  Bugfixes:
    - Fixed biter ramming crash.
    - Fixed crash when claiming hexes near ungenerated chunks.
    - Fixed that the guaranteed trades on Nauvis could be put in water hexes, where they would never be found.
    - Fixed that the piggy bank was deleting coins when your inventory is full.
    - Fixed that trade productivity would be displayed as being high enough for item rank-ups but they weren't when attempted.
    - Fixed that the /summon command would only spawn units on Nauvis.
    - Fixed incompatibilities with some quality mods.
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 4/2/26
  Bugfixes:
    - Fixed rare crash when a hex core GUI is open.
---------------------------------------------------------------------------------------------------
Version: 1.6.6
Date: 4/2/26
  Bugfixes:
    - Fixed rare crash when you open an equipment grid while viewing a hex core right before a train makes a trade at that hex core.
---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 4/2/26
  Gui:
    - Improved the quality selection GUI for trades, reducing icon clutter and showing only valid choices.
    - Trades in the hex core GUI now separately show the quality (trade productivity and the quality symbols on items) to which they are set.
    - Removed the quality dropdown to the right of the "Trades" header in the hex core GUI.
  Bugfixes: